# rust-gateway

./: .gitignore  Cargo.toml
config/: test.toml
config/api/: baidu.toml  test.toml
config/router/your/: path.json.toml
config/service/: default.toml
etc/: entry.toml
etc/file/router/your/: path.json  path.json.toml
etc/file/service/: default.toml
scripts/: gen-entity.sh
src/: lib.rs  main.rs
src/container/: api.rs  config.rs  mod.rs  pool.rs  timer.rs
src/data_factory/service/: define.rs  file.rs  mod.rs  mysql.rs
src/file/: file.rs
src/handler/: mesh.rs  mod.rs  proxy.rs  service.rs  test.rs  work.rs
src/model/: define.rs  mod.rs
src/model/gateway/: mod.rs  prelude.rs  router.rs  service.rs  service_api.rs
src/request/: define.rs  http.rs  mesh.rs  mod.rs  request.rs
src/service/: work.rs
src/service_api/: api.rs
src/util/: file.rs  json.rs  mod.rs  request.rs  response.rs
