[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
tokio = { version = "1.13.0", features = ["full"] }
serde = { version = "^1.0", features = ["derive"]}
tracing-subscriber = "0.3.15"
tracing = "0.1"
toml = "0.5.9"
rbs = { version = "0.1"}
rbatis = { version = "4.0"}
rbdc-mysql={version="0.1"}
reqwest = { version = "0.11", features = ["json"] }