[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
hyper = "0.13"
lazy_static = "1.4.0"
tokio = { version = "1.13.0", features = ["full"] }
serde = { version = "^1.0", features = ["derive"]}
tracing-subscriber = "0.3.15"
tracing = "0.1"
tracing-error = "0.2.0"
toml = "0.5.9"
tracing-appender = "0.2.2"
rbs = { version = "0.1"}
rbatis = { version = "4.0"}
rbdc-mysql={version="0.1"}
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
sqlx = { version = "0.5.10",  features = ["runtime-tokio-rustls", "mysql", "any"]}
sea-orm = {version = "0.10.6", features = ["runtime-tokio-rustls", "sqlx-mysql", "macros"]}